# sample-flat-fastapi

./: .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
.devcontainer/: Dockerfile  Dockerfile.dev  devcontainer.json  docker-compose.yml
scripts/: .build_image.py  build_image.py  pre_commit.py
src/: api.py  cli.py  config.py  logger.py  logger_json.py  logger_json_handler.py  main.py  pyproject.py
