[tool.poetry]
name = "sample-service-flat-fastapi"
version = "0.1.0"
description = ""
authors = ["Daniel Fajt <daniel29se@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
typer = "^0.6.1"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
colorama = "^0.4.5"
pyright = "^1.1.273"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.isort]
profile = "black"
skip_glob = [".venv", "venv", "docs/*"]
skip = [".md", ".json"]
force_to_top = ["envars.py"]