[tool.poetry]
name = "sample-service-flat-fastapi"
version = "0.1.0"
description = ""
authors = ["Daniel Fajt <daniel29se@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.18.3"
fastapi = "^0.85.1"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
isort = "^5.10.1"
flake8 = "^5.0.4"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.isort]
profile = "black"
skip_glob = [".venv", "venv", "docs/*"]
skip = [".md", ".json"]
force_to_top = ["envars.py"]